修改图片地址

--- a/source/_posts/2017-10-01-快速排序实践.md
+++ b/source/_posts/2017-10-01-快速排序实践.md
@@ -157,7 +157,7 @@ public int partSort(int[] arr, int low, int high) {
 
 Fork/Join框架是Java7提供了的一个用于并行执行任务的框架。它可以充分利用多核CPU的优势，将一个大任务切割成多个足够小的任务并行执行（fork）,等所有子任务执行完毕后合并结果（join）,流程图类似下面：
 
-![这里写图片描述](http://img.blog.csdn.net/20171001141112983?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvd3RoZmVuZw==/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+![这里写图片描述](http://img.wthfeng.com/img/wthfeng/sort/20171001141112983.png)
 
  图片来自文章[聊聊并发（八）——Fork/Join框架介绍](http://www.infoq.com/cn/articles/fork-join-introduction)。
 
