--- a/source/_posts/2019-01-06-Redis持久化.md
+++ b/source/_posts/2019-01-06-Redis持久化.md
@@ -26,15 +26,15 @@ RDB持久化即将当前Redis实例中的数据快照全部保存的磁盘的过
 
 如图，上次rdb同步时间在17:20
 
-![](/http://img.wthfeng.com/img/wthfeng/redis/WeChatf23994fda146eef357cdc94da5abc642.png)
+![](http://img.wthfeng.com/img/wthfeng/redis/WeChatf23994fda146eef357cdc94da5abc642.png)
 
 执行命令`bgsave`后, 返回 `Background saving started` ,
 
-![](/http://img.wthfeng.com/img/wthfeng/redis/WeChat5bb07d90c280fa760e9bb9c6e85fddef.png)
+![](http://img.wthfeng.com/img/wthfeng/redis/WeChat5bb07d90c280fa760e9bb9c6e85fddef.png)
 
 查看rdb文件更新时间，已变为当前时间。
 
-![](/http://img.wthfeng.com/img/wthfeng/redis/WeChatecd20b2ed4f6cf03e5eceeede1b4fd70.png)
+![](http://img.wthfeng.com/img/wthfeng/redis/WeChatecd20b2ed4f6cf03e5eceeede1b4fd70.png)
 
 ### 自动触发
 
@@ -53,14 +53,14 @@ RDB持久化即将当前Redis实例中的数据快照全部保存的磁盘的过
 
 另外，当在客户端执行关闭服务器命令`shutdown`，若redis没有开启AOF,则自动执行`bgsave`进行备份。
 
-![](/http://img.wthfeng.com/img/wthfeng/redis/WeChat610ff13a7239eaa47d6a4a4c18797699.png)
+![](http://img.wthfeng.com/img/wthfeng/redis/WeChat610ff13a7239eaa47d6a4a4c18797699.png)
 
 
 ### RDB流程
 
 由于save的持久化命令会发送阻塞，所以目前基本是用bgsave命令触发的RDB,关于bgsave的流程如下图所示。
 
-![](/http://img.wthfeng.com/img/wthfeng/redis/WeChat8c79461dc66d79c5ca0dba0097296469.png)
+![](http://img.wthfeng.com/img/wthfeng/redis/WeChat8c79461dc66d79c5ca0dba0097296469.png)
 
 简要流程如下
 
@@ -106,7 +106,8 @@ aof默认是关闭的，使用`appendonly yes`开启。用`appendfilename`设置
 
 在配置文件设好后重启redis,即开启了aof功能。可使用`info persistence`可查看redis持久化的参数，如下
 
-![](/http://img.wthfeng.com/img/wthfeng/redis/WeChat8445e66e18b20cbe58e5ae34b6209d53.png)
+> aof_enabled:1
+
 
 表示已开启aof功能。
 
@@ -132,7 +133,7 @@ AOF的流程如下
 
 用流程图表示就是
 
-![](/http://img.wthfeng.com/img/wthfeng/redis/WeChate6360e05fec4996a204bc5d12950e818.png)
+![](http://img.wthfeng.com/img/wthfeng/redis/WeChate6360e05fec4996a204bc5d12950e818.png)
 
 为什么不直接将命令写入磁盘很容易理解，这里需关注的是以什么策略从缓冲区写到磁盘。redis提供了3种策略。
 
@@ -189,7 +190,7 @@ auto-aof-rewrite-min-size 64mb
 
 ### 重写流程
 
-![](/http://img.wthfeng.com/img/wthfeng/redis/WeChat4d69e335c54790abe72e6aab1a167bef.png)
+![](http://img.wthfeng.com/img/wthfeng/redis/WeChat4d69e335c54790abe72e6aab1a167bef.png)
 
 1. redis主进程收到aof重写命令（bgwriteaof）,fork出子进程用于执行aof重写流程(图中1，2)。
 2. 主进程继续接收客户端请求，将请求写入aof_buf缓冲区。保证原有aof流程正常工作（图中3.1.1和3.1.2）。
